Revert "Feature log"

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -1,6 +1,6 @@
-﻿NotBlank=campo obrigatório
-Length=deve ter no maximo {2} e no minimo {1} caracteres
-Email= deve ser um e-mail valido
-CPF=CPF invalido
-Min=O valor tem que ser acima de um salario minimo
-CNPJ=CNPJ invalido
+NotBlank=campo é obrigatório
+Length=deve ter no mínimo {2} e no máximo {1} caracteres
+Email= deve ser um e-mail válido
+CPF=CPF inválido
+Min=O valor não pode ser abaixo de um salário mínimo
+CNPJ=CNPJ inválido
