--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -1,6 +1,5 @@
-﻿NotBlank=campo obrigatório
+﻿NotBlank=campo obrigatorio
 Length=deve ter no maximo {2} e no minimo {1} caracteres
 Email= deve ser um e-mail valido
 CPF=CPF invalido
-Min=O valor tem que ser acima de um salario minimo
 CNPJ=CNPJ invalido
